<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_phone_shows">Screen flash for calls</string>
    <string name="action_settings">Setting</string>
    <string name="ad_no">No</string>
    <string name="ad_skip">Skip</string>
    <string name="ad_tag">AD</string>
    <string name="ad_yes">Yes</string>
    <string name="app_name">Phone Color Screen</string>
    <string name="app_share">Enjoy this amazing Phone Color Screen make your phone so cool: https://play.google.com/store/apps/details?id=com.color.caller.screen.flash&amp;;utm_source=goal&amp;utm_medium=hyperlink&amp;utm_campaign=share</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_success">Applied Successfully</string>
    <string name="battery_control_summary">LED flash will be disable when battery lower than</string>
    <string name="battery_control_t">Battery Control</string>
    <string name="bbase_manifest_pkg">cootek.bbase.daemon.sample</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="call_name">Lisa</string>
    <string name="call_phone">012-987-6543</string>
    <string name="call_style_ballroom">Fire</string>
    <string name="call_style_birthday">Birthday</string>
    <string name="call_style_bubble">Bubble</string>
    <string name="call_style_butterfly">Butterfly</string>
    <string name="call_style_diamonds">Fire</string>
    <string name="call_style_fire">Fire</string>
    <string name="call_style_flash">Flash</string>
    <string name="call_style_geometry">Geometry</string>
    <string name="call_style_kaleidoscope">Kaleidoscope</string>
    <string name="call_style_love">Love</string>
    <string name="call_style_melt">Melt</string>
    <string name="call_style_move">Move</string>
    <string name="call_style_neon_light">Neon Light</string>
    <string name="call_style_technology">Technology</string>
    <string name="call_style_universe">Universe</string>
    <string name="call_style_water">Water</string>
    <string name="camera_in_use">The LED is occupied by other app</string>
    <string name="camera_no_permission">Turn on camera permission to use the LED</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clean_up_basketball">According to scientific verification, play basketball will burn off 250cal for an hour, move it!</string>
    <string name="clean_up_bend">According to scientific verification, an hour aerobics will burn off 330cal, move it!</string>
    <string name="clean_up_bike">According to scientific verification, an hour cycling will burn off 415cal, move it!</string>
    <string name="clean_up_box">According to scientific verification, an hour boxing will burn off 450cal, move it!</string>
    <string name="clean_up_exit">Exit</string>
    <string name="clean_up_eye_close">OK, Thanks</string>
    <string name="clean_up_fit_close">OK, Thanks</string>
    <string name="clean_up_light_high_text">The current screen is too bright and bad for vision, please protect your eyes scientifically.</string>
    <string name="clean_up_light_high_title">Warning</string>
    <string name="clean_up_light_low_text">The current screen is too dark and bad for vision, please protect your eyes scientifically.</string>
    <string name="clean_up_light_low_title">Warning</string>
    <string name="clean_up_light_proper_text">The current screen brightness is the best, please keep it！</string>
    <string name="clean_up_light_proper_title">Perfect</string>
    <string name="clean_up_skip">According to scientific verification, half-hour rope skipping will burn off 400cal, move it!</string>
    <string name="clean_up_stairs">According to scientific verification, climbing the stairs will burn off 480cal for an hour, move it!</string>
    <string name="clean_up_sweep">According to scientific verification, an hour cleaning will burn off 228cal, move it!</string>
    <string name="clean_up_swim">According to scientific verification, half-hour swimming will burn off 175cal, move it!</string>
    <string name="clean_up_tennis">According to scientific verification, playing tennis will burn off 220cal for half an hour, move it!</string>
    <string name="clean_up_walk">According to scientific verification, an hour brisk walk will burn off 550cal, move it!</string>
    <string name="clean_up_water_bed">A cup of water before going to bed can regulate blood concentration and promote sleep.</string>
    <string name="clean_up_water_close">OK, Thanks</string>
    <string name="clean_up_water_dinner">A cup of water before dinner can reduce physical fatigue and promote absorption.</string>
    <string name="clean_up_water_lunch">A cup of water before lunch can promote metabolism and increase the feeling of satiety.</string>
    <string name="clean_up_water_morning">A cup of water after you get up can help your stomach wriggle and stay away from constipation.</string>
    <string name="clean_up_water_random_1">Water is a zero-calorie drink, and drinking water often helps you keep a good figure.</string>
    <string name="clean_up_water_random_2">Water is a beauty sage, drinking water often can help moisturize the skin.</string>
    <string name="clean_up_water_random_3">Water is the source of life, drinking water often can help to relieve anxiety and increase vigor.</string>
    <string name="clean_up_water_sports">A cup of water before exercise can increase blood circulation and keep energetic.</string>
    <string name="com.crashlytics.android.build_id">42d01929-e6b2-4f56-ac5b-8d1acd78e3fa</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter your code.</string>
    <string name="cs_setting_enable_show">Turn on Call Screen Show</string>
    <string name="hint_confirm_decline_privacy_policy_positive">Decline</string>
    <string name="label_common_settings">Common Settings</string>
    <string name="label_general_settings">General</string>
    <string name="label_popular_function">Popular Function</string>
    <string name="no">NO</string>
    <string name="optpage_user_feedback">Feedback</string>
    <string name="rate_feature_desc_later">Send feedback</string>
    <string name="rate_feature_desc_rate">Rate us on Google Play</string>
    <string name="rate_feature_dlg_title">Enjoy using %s?</string>
    <string name="rate_star_dlg_desc">Support us by rating 5 stars on Google Play</string>
    <string name="reminder_btn">Turn on</string>
    <string name="reminder_summary">LED will flash for new messages</string>
    <string name="reminder_title">Notification reminder</string>
    <string name="setting_erase_personal_data">Erase Personal Data</string>
    <string name="setting_feedback_summary">Contact Us</string>
    <string name="setting_feedback_title">Feedback</string>
    <string name="setting_key_off">OFF</string>
    <string name="setting_key_on">ON</string>
    <string name="setting_led_flash_summary">LED flashes for incoming calls</string>
    <string name="setting_led_flash_title">LED flash for calls</string>
    <string name="setting_light_on_startup">Light on startup</string>
    <string name="setting_light_on_startup_summary">Turn on Flashlight on startup</string>
    <string name="setting_notireminder_summary">LED flashes for new messages</string>
    <string name="setting_notireminder_title">Notification Reminder</string>
    <string name="setting_open_notification_bar">Notification Toogle</string>
    <string name="setting_permission_guide">Permissions Guide</string>
    <string name="setting_permission_summary">Ensure App works properly</string>
    <string name="setting_policy_summary">Privacy Policy</string>
    <string name="setting_policy_title">Privacy Policy</string>
    <string name="setting_send_personal_data">Send Personal Data</string>
    <string name="setting_shake_summary">shake shake</string>
    <string name="setting_shake_title">Shake to turn on</string>
    <string name="setting_share_summary">Tell your friends</string>
    <string name="setting_share_title">Share</string>
    <string name="setting_shortcut_summary">short cut</string>
    <string name="setting_shortcut_title">Add to Homescreen</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_sound_summary">Turn on sound effect</string>
    <string name="setting_support_us_summary">Rate us on Google Play</string>
    <string name="setting_support_us_title">Support Us</string>
    <string name="usage_guide_dialog_agree">Accept</string>
    <string name="usage_guide_ending_basic">"All %s user information transferred and stored are fully encrypted and governed by applicable privacy protection laws and regulations. You can view the complete terms on our "</string>
    <string name="usage_guide_intro">"Dear users, thank you for using %s. According to the EU General Data Protection Regulation (GDPR), we have made some changes to the terms regarding collecting and processing personal information in our privacy policy. In order to keep your information more confidential, please review the updated "</string>
    <string name="usage_guide_text_short">1.To implement both the transaction and inquiry functions, we will record your register information (i.e., your Google ID, Facebook ID). It is important to note that we will only collect information that you have allowed these platforms to provide to third parties.</string>
    <string name="usage_guide_title">%s Privacy Policy</string>
    <string name="yes">YES</string>
</resources>