<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background_app" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar android:background="@color/background_setting_toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <TextView android:textSize="20.0sp" android:textStyle="normal" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_settings" android:lineSpacingExtra="8.0sp" android:fontFamily="sans-serif-medium" />
    </android.support.v7.widget.Toolbar>
    <ScrollView android:id="@id/sv_setting" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:background="#57000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="#4cffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="13.0dip" android:layout_marginBottom="5.0dip" android:text="@string/label_popular_function" android:fontFamily="sans-serif" />
            </LinearLayout>
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_enable_show" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:key_isvisible="false" app:new_text="HOT" app:set_icon="@mipmap/icon_call_show" app:set_title="@string/cs_setting_enable_show" app:status_ischecked="false" app:status_off="@string/cs_setting_enable_show" app:status_on="@string/cs_setting_enable_show" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_shake" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:key_isvisible="false" app:new_text="HOT" app:set_icon="@mipmap/icon_shake" app:set_title="@string/setting_shake_title" app:status_ischecked="false" app:status_off="@string/setting_shake_summary" app:status_on="@string/setting_shake_summary" />
            <RelativeLayout android:id="@id/shake_rate_rl" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:src="@mipmap/icon_shake_lighter" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <cootek.matrix.flashlight.widget.RangeSeekBar android:id="@id/shake_rate_seekbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="36.0dip" android:layout_marginRight="44.0dip" app:cellMode="number" app:lineColorSelected="@color/skin_yellow" app:max="100.0" app:min="30.0" app:progressHintMode="alwaysHide" app:seekBarHeight="2.0dip" app:seekBarMode="single" app:thumbPrimaryColor="@color/skin_yellow" app:thumbSecondaryColor="@color/skin_yellow" app:thumbSize="15.0dip" />
                <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="24.0dip" android:src="@mipmap/icon_shake_heavier" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_led_flash" android:layout_width="fill_parent" android:layout_height="wrap_content" app:key_isvisible="true" app:key_off="@string/setting_key_off" app:key_on="@string/setting_key_on" app:set_icon="@mipmap/icon_led_flash" app:set_title="@string/setting_led_flash_title" app:status_ischecked="false" app:status_off="@string/setting_led_flash_summary" app:status_on="@string/setting_led_flash_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_noti_reminder" android:layout_width="fill_parent" android:layout_height="wrap_content" app:key_isvisible="true" app:key_off="@string/setting_key_off" app:key_on="@string/setting_key_on" app:set_icon="@mipmap/icon_notification_reminder" app:set_title="@string/setting_notireminder_title" app:status_ischecked="false" app:status_off="@string/setting_notireminder_summary" app:status_on="@string/setting_notireminder_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_shortcut" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:key_isvisible="false" app:set_icon="@mipmap/icon_shortcut" app:set_title="@string/setting_shortcut_title" app:status_ischecked="false" app:status_off="@string/setting_shortcut_summary" app:status_on="@string/setting_shortcut_summary" app:switch_isvisible="false" />
            <LinearLayout android:background="#57000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="#4cffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="13.0dip" android:layout_marginBottom="5.0dip" android:text="@string/label_common_settings" android:fontFamily="sans-serif" />
            </LinearLayout>
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_light_on_startup" android:layout_width="fill_parent" android:layout_height="wrap_content" app:set_icon="@mipmap/icon_flash_light" app:set_title="@string/setting_light_on_startup" app:status_ischecked="false" app:status_off="@string/setting_light_on_startup_summary" app:status_on="@string/setting_light_on_startup_summary" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_notification_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:set_icon="@mipmap/icon_setting_notification_bar" app:set_title="@string/setting_open_notification_bar" app:status_ischecked="true" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_sound" android:layout_width="fill_parent" android:layout_height="wrap_content" app:set_icon="@mipmap/icon_sound" app:set_title="@string/setting_sound" app:status_off="@string/setting_sound_summary" app:status_on="@string/setting_sound_summary" />
            <LinearLayout android:background="#57000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="#4cffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="13.0dip" android:layout_marginBottom="5.0dip" android:text="@string/label_general_settings" android:fontFamily="sans-serif" />
            </LinearLayout>
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_permission_guide" android:layout_width="fill_parent" android:layout_height="wrap_content" app:set_icon="@mipmap/icon_premisson_guide" app:set_title="@string/setting_permission_guide" app:status_off="@string/setting_permission_summary" app:status_on="@string/setting_permission_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_support_us" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:set_icon="@mipmap/icon_support_us" app:set_title="@string/setting_support_us_title" app:status_off="@string/setting_support_us_summary" app:status_on="@string/setting_support_us_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_share" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:key_isvisible="false" app:set_icon="@mipmap/icon_share" app:set_title="@string/setting_share_title" app:status_ischecked="false" app:status_off="@string/setting_share_summary" app:status_on="@string/setting_share_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_feedback" android:layout_width="fill_parent" android:layout_height="wrap_content" app:set_icon="@mipmap/icon_feedback" app:set_title="@string/setting_feedback_title" app:status_off="@string/setting_feedback_summary" app:status_on="@string/setting_feedback_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:key_isvisible="false" app:set_icon="@mipmap/icon_policy" app:set_title="@string/setting_policy_title" app:status_ischecked="false" app:status_off="@string/setting_policy_summary" app:status_on="@string/setting_policy_summary" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_send_personal_data" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:set_icon="@mipmap/icon_gdpr" app:set_title="@string/setting_send_personal_data" app:status_ischecked="true" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_erase_personal_data" android:layout_width="fill_parent" android:layout_height="wrap_content" app:has_summary="false" app:key_isvisible="false" app:set_icon="@mipmap/icon_gdpr" app:set_title="@string/setting_erase_personal_data" app:status_ischecked="false" app:status_off="" app:status_on="" app:switch_isvisible="false" />
            <cootek.matrix.flashlight.widget.SettingView android:id="@id/sv_test" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:key_isvisible="false" app:set_icon="@mipmap/ic_launcher" app:set_title="Test" app:status_ischecked="false" app:status_off="Show TestActivity" app:status_on="Show TestActivity" app:switch_isvisible="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>