<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="18.0dip" android:paddingTop="8.0dip" android:paddingRight="18.0dip" android:paddingBottom="20.0dip" android:layout_width="316.0dip" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="10.0dip" android:textColor="#4e000000" android:layout_gravity="end" android:id="@id/btn_decline" android:layout_width="wrap_content" android:layout_height="12.0dip" android:text="@string/hint_confirm_decline_privacy_policy_positive" />
        </FrameLayout>
        <TextView android:textSize="24.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/page_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/usage_guide_title" android:layout_alignParentTop="true" />
        <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:id="@id/desc_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="6.0dip" android:text="@string/usage_guide_intro" android:layout_below="@id/page_title" />
        <com.cootek.business.ui.MaxHeightScrollView android:id="@id/scroll_view" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" app:maxHeight="120.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                <TextView android:textSize="12.0dip" android:textColor="#97000000" android:id="@id/privacy_key_points" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/usage_guide_text_short" />
            </LinearLayout>
        </com.cootek.business.ui.MaxHeightScrollView>
        <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:id="@id/desc_ending" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="8.0dip" android:text="@string/usage_guide_ending_basic" android:layout_above="@id/btn_accept" />
        <LinearLayout android:orientation="horizontal" android:id="@id/btn_accept" android:background="@drawable/bg_btn_privacy_policy_guide" android:layout_width="fill_parent" android:layout_height="44.0dip" android:baselineAligned="false" android:layout_alignParentBottom="true">
            <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@id/button_main_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/usage_guide_dialog_agree" android:singleLine="true" android:fontFamily="sans-serif-medium" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>